--- a/src/07-using-3rd-party-libraries/material.html
+++ b/src/07-using-3rd-party-libraries/material.html
@@ -1,12 +1,14 @@
 <md-table md-card>
   <md-table-row>
     <md-table-head>Name</md-table-head>
-    <md-table-head>Title</md-table-head>
     <md-table-head>Email</md-table-head>
+    <md-table-head>Gender</md-table-head>
+    <md-table-head>Title</md-table-head>
   </md-table-row>
-  <md-table-row  v-for="(profile, index) in profiles" v-bind:key="index">
-    <md-table-cell>{{ profile.name }}</md-table-cell>
-    <md-table-cell>{{ profile.title }}</md-table-cell>
-    <md-table-cell>{{ profile.email }}</md-table-cell>
+  <md-table-row  v-for="(item, index) in profiles" v-bind:key="index">
+    <md-table-cell md-sort-by="name">{{ item.name }}</md-table-cell>
+    <md-table-cell md-sort-by="email">{{ item.email }}</md-table-cell>
+    <md-table-cell md-sort-by="gender">{{ item.gender }}</md-table-cell>
+    <md-table-cell md-sort-by="title">{{ item.title }}</md-table-cell>
   </md-table-row>
 </md-table>
